<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:elevation="8dp"
    card_view:cardElevation="10dp"
    card_view:cardBackgroundColor="@color/github_light"
    card_view:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/img_item_photo"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            tools:src="@tools:sample/avatars"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_item_username"
            tools:text="@string/username"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@id/img_item_photo"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_item_name"
            tools:text="@string/name"
            android:textSize="14sp"
            card_view:layout_constraintVertical_bias="0.0"
            card_view:layout_constraintBottom_toBottomOf="@id/img_item_photo"
            card_view:layout_constraintStart_toStartOf="@id/tv_item_username"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_username"
            card_view:layout_constraintEnd_toEndOf="@id/tv_item_username" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/tv_item_company"
            android:layout_marginTop="8dp"
            android:maxLines="3"
            android:ellipsize="end"
            tools:text="@string/company"
            card_view:layout_constraintVertical_bias="0.0"
            card_view:layout_constraintBottom_toBottomOf="@id/img_item_photo"
            card_view:layout_constraintStart_toStartOf="@id/tv_item_username"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_name"
            card_view:layout_constraintEnd_toEndOf="@id/tv_item_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>